--- a/bio.html
+++ b/bio.html
@@ -37,6 +37,6 @@
       <li>Программирование</li>
       <li>Робототехника</li>
     </ol>
-    <p><a href = "Animal.html">По этой ссылке</a> вы можете прочитать про мое тотемное животное.</p>
+    <p><a href = "animal.html">По этой ссылке</a> вы можете прочитать про мое тотемное животное.</p>
   </body>
 </html>
