--- a/bio.html
+++ b/bio.html
@@ -11,12 +11,12 @@
         <tr>
             <td>Страна проживания:</td>
             <td>Россия</td>
-            <td><img src = "Флаг.png" height = "20px"/></td>
+            <td><img src = "flag.png" height = "20px"/></td>
         </tr>
         <tr>
             <td>Город проживания:</td>
             <td>Санкт-Петербург</td>
-            <td><img src = "Герб.png" height = "30px"/></td>
+            <td><img src = "arms.png" height = "30px"/></td>
         </tr>
         <tr>
             <td>Дата рождения:</td>
