Renamed school/ into bio/. Renamed bio/bio.html into bio/index.html.

--- a/bio/index.html
+++ b/bio/index.html
@@ -5,27 +5,27 @@
   <body>
     <h1>Подкопаев Александр Викторович</h1>
     <h2><img src = "PodkopaevAV.jpg" height = "130px"/></h2>
-    <p>Личные данный:</p>
+    <p>Личные данные:</p>
     <table border = "1px" cellspacing = "0px" cellpadding = "10px">
       <tbody style = "background-color: chartreuse">
         <tr>
-            <td>Страна проживания:</td>
-            <td>Россия</td>
+            <td><b>Страна проживания</b></td>
+            <td><em>Россия</em></td>
             <td><img src = "flag.png" height = "20px"/></td>
         </tr>
         <tr>
-            <td>Город проживания:</td>
-            <td>Санкт-Петербург</td>
+            <td><b>Город проживания</b></td>
+            <td><em>Санкт-Петербург</em></td>
             <td><img src = "arms.png" height = "30px"/></td>
         </tr>
         <tr>
-            <td>Дата рождения:</td>
-            <td>02.07.2004</td>
+            <td><b>Дата рождения</b></td>
+            <td><em>02.07.2004</em></td>
             <td></td>
         </tr>
       <tbody>
     </table>
-    <p><b>Музыкальные инструменты, на которых умею играть:</b></p>
+    <p><b>Музыкальные инструменты, на которых я умею играть:</b></p>
     <ol>
       <li>Аккордеон</li>
       <li>Пианино</li>
@@ -37,6 +37,6 @@
       <li>Программирование</li>
       <li>Робототехника</li>
     </ol>
-    <p><a href = "animal.html">По этой ссылке</a> вы можете прочитать про мое тотемное животное.</p>
+    <p><a href = "animal.html"><em>По этой ссылке</em></a> вы можете прочитать про мое тотэмное животное.</p>
   </body>
 </html>
